--- a/.env
+++ b/.env
@@ -1,18 +1,23 @@
-# App
-NODE_ENV=development
-PORT=3000
+﻿# Railway PostgreSQL Database Configuration
+# IMPORTANT: Replace RAILWAY_PRIVATE_DOMAIN with your actual Railway PostgreSQL private domain
+# You can find this in your Railway project settings under the PostgreSQL service
+# For public access from outside Railway, use the DATABASE_PUBLIC_URL format instead
+DATABASE_URL="postgresql://postgres:qXCWumTJoXYcEACBkBAvOkUWXJyeZJve@ballast.proxy.rlwy.net:35781/railway"
+#DATABASE_URL="postgresql://postgres:EOOJsMuVGhvEbcDTODJlhvbpQWPMPNjG@metro.proxy.rlwy.net:51520/railway"
+# Postgres
+#DATABASE_URL=postgresql://user:abc123@127.0.0.1:5432/pricesdb
+# Railway Redis Configuration
+REDIS_URL=redis://default:elBofXpZTfUMmtGFuoPbFWoRRFScWaSr@shuttle.proxy.rlwy.net:42427
 
-# Coingecko
+# CoinGecko API Configuration
 COINGECKO_BASE=https://api.coingecko.com/api/v3
 VS_CURRENCY=usd
-# Redis (host redis)
-REDIS_URL=redis://127.0.0.1:6379
-
-PRICE_UPDATE_INTERVAL_MS=60000    # poll every 60s
-COINGECKO_MAX_PAGES=1            # fetch only page=1 while testing
 PER_PAGE=250
-PRICE_CACHE_TTL_SECONDS=30
-SEED_IDS=bitcoin,ethereum,solana  # only update these ids if you want to reduce traffic
+COINGECKO_MAX_PAGES=2
 
-# Postgres
-DATABASE_URL=postgresql://user:abc123@127.0.0.1:5432/pricesdb
+# Price Update Settings
+PRICE_UPDATE_INTERVAL_MS=20000
+PRICE_CACHE_TTL_SECONDS=30
+
+# Seed Script
+SEED_IDS=bitcoin,ethereum,solana
