fix_error_logged_issue

--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 # IMPORTANT: Replace RAILWAY_PRIVATE_DOMAIN with your actual Railway PostgreSQL private domain
 # You can find this in your Railway project settings under the PostgreSQL service
 # For public access from outside Railway, use the DATABASE_PUBLIC_URL format instead
-DATABASE_URL="postgresql://postgres:qXCWumTJoXYcEACBkBAvOkUWXJyeZJve@ballast.proxy.rlwy.net:35781/railway"
-#DATABASE_URL="postgresql://postgres:EOOJsMuVGhvEbcDTODJlhvbpQWPMPNjG@metro.proxy.rlwy.net:51520/railway"
+#DATABASE_URL="postgresql://postgres:qXCWumTJoXYcEACBkBAvOkUWXJyeZJve@ballast.proxy.rlwy.net:35781/railway"
+DATABASE_URL="postgresql://postgres:YvNTeVtEfyBhzNqvQeudKvtEwPPpWMJQ@caboose.proxy.rlwy.net:50912/railway"
 # Postgres
 #DATABASE_URL=postgresql://user:abc123@127.0.0.1:5432/pricesdb
 # Railway Redis Configuration
-REDIS_URL=redis://default:elBofXpZTfUMmtGFuoPbFWoRRFScWaSr@shuttle.proxy.rlwy.net:42427
-
+#REDIS_URL=redis://default:elBofXpZTfUMmtGFuoPbFWoRRFScWaSr@shuttle.proxy.rlwy.net:42427
+REDIS_URL=redis://default:AqdrrosToHJJyHewyfHynhlGrpHEGysx@shortline.proxy.rlwy.net:15907
 # CoinGecko API Configuration
 COINGECKO_BASE=https://api.coingecko.com/api/v3
 VS_CURRENCY=usd
